--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "core-js": "^3.6.5",
     "firebase": "^8.0.0",
     "tailwindcss": "^1.9.6",
-    "vue": "^3.0.0"
+    "vue": "^3.0.0",
+    "vue-router": "^3.4.9"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
