--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "firebase": "^8.0.0",
     "tailwindcss": "^1.9.6",
     "vue": "^3.0.0",
-    "vue-router": "^3.4.9"
+    "vue-router": "^4.0.0-rc.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
