--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "firebase": "^8.0.0",
+    "sass": "^1.29.0",
+    "sass-loader": "^10.0.5",
+    "scss": "^0.2.4",
+    "scss-loader": "^0.0.1",
     "tailwindcss": "^1.9.6",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-rc.1"
